--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="shoq" style="color: green; margin-top: 4em;" class="shadow shadow-light"></div>
 </div> -->
 <div id="firstDiv">
-<h2 style="margin-left: 43%; ">MINI MART</h2>
+<h2 style="margin-left: 43%; " id="mini">MINI MART</h2>
 <div class="shadow shadow-light w-75 mx-auto" style="justify-content: center; align-items: center; padding: 20px;">
     <input type="text" id="input" class="form-control">
     <button onclick="addItems()" class="btn btn-outline-danger w-25 mt-3" style="margin-left: 35%;">submit</button>
